# snap-rat-vibes

./: .gitignore  Cargo.toml  ENDPOINTS.md  README.md  workshop.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  security.yml  unit-tests.yml
.workshop/build-essential/: sdkcraft.yaml
.workshop/build-essential/hooks/: setup-base
artie_sandbox/: checks.sh  todo linter workshop
snap/: snapcraft.yaml
snap-rat/: Cargo.toml  README.md
snap-rat/src/: app.rs  keyboard.rs  layout.rs  lib.rs  main.rs  mouse.rs  resume.rs  types.rs
snap-rat/src/browse/: mod.rs  render.rs  state.rs
snap-rat/src/changes/: mod.rs  render.rs  state.rs
snap-rat/src/channels/: mod.rs  render.rs  state.rs
snap-rat/src/components/: render.rs
snap-rat/src/confirm/: mod.rs  render.rs  state.rs
snap-rat/src/connections/: mod.rs  render.rs  state.rs
snap-rat/src/detail/: mod.rs  render.rs
snap-rat/src/help/: mod.rs  render.rs
snap-rat/src/manage/: mod.rs  render.rs  state.rs
snap-rat/src/services/: render.rs
snap-rat/src/slots/: mod.rs  render.rs  state.rs
snapd-rs/src/: client.rs  error.rs  lib.rs  types.rs
snapd-rs/src/api/: interfaces.rs  notices.rs  snaps.rs
snapd-rs/tests/: integration_test.rs  integration_tests.rs  mock_snapd.rs
