[package]
name = "snap-rat"
version.workspace = true
edition.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
snapd-rs.workspace = true
anyhow.workspace = true
libc.workspace = true
tokio.workspace = true
ratatui-image.workspace = true
image.workspace = true
reqwest.workspace = true
