[package]
name = "snap-rat-vibes"
version.workspace = true
edition.workspace = true
description = "Ratatui Based TUI snap manager and snap store front-end"
license = "GPL-3.0"
repository = "https://github.com/artiepoole/snap-rat-vibes"
keywords = ["snapd", "snap", "tui", "terminal", "ratatui"]
categories = ["command-line-utilities"]


[dependencies]
ratatui.workspace = true
crossterm.workspace = true
snapd-rs-artie.workspace = true
anyhow.workspace = true
libc.workspace = true
tokio.workspace = true
ratatui-image.workspace = true
image.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
